--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,10 @@ body {
 }
 
 .content {
-    background: rgba(1, 1, 1, 0.95);
+    background: #000;
     padding: 20px;
     border-radius: 8px;
+    border: 0px solid #fff;
     position: relative;
     z-index: 1;
 }
@@ -47,7 +48,7 @@ body {
 
 h1 {
     font-family: 'Courier New', Courier, monospace;
-    color: #47dd2d;
+    color: #3c3;
 }
 
 textarea {
@@ -56,18 +57,22 @@ textarea {
     margin: 10px 0;
     padding: 10px;
     box-sizing: border-box;
-    border: 1px solid #cccccc7d;
-    border-radius: 4px;
+    border: 0.5px solid #fff;
+    border-radius: 0px;
     font-family: 'Courier New', Courier, monospace;
+    color: #3c3;
+    background: #000;
 }
 
 .result {
-    background: #f0f0f0;
+    background: #000;
     padding: 10px;
     min-height: 50px;
     word-wrap: break-word;
     white-space: pre-wrap;
     box-sizing: border-box;
     width: 100%;
-    border-radius: 4px;
+    border: 0.5px solid #fff;
+    border-radius: 0px;
+    color: #3c3;
 } 
